src/objects/DraftTemplate__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Draft Templates</relationshipLabel>
        <relationshipName>DraftTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Draft Templates</relationshipLabel>
        <relationshipName>DraftTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextContent__c</fullName>
        <label>Text Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Draft Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllDraftTemplates</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Channel__c</columns>
        <columns>EmailSubject__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Draft Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyDraftTemplates</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Channel__c</columns>
        <columns>EmailSubject__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Draft Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>